[ Spring Security ] – csrf tokken disabled

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,10 @@ spring.mvc.view.suffix=.jsp
 
 # Logging
 logging.level.root=info
+#logging.level.org.springframework.web=info
+#logging.level.org.hibernate=info
 
 # Security
 security.user.name=admin
 security.user.password=admin
+security.basic.enabled=false
